# iot-middleware-freertos-samples

./: .gitmodules  CMakeLists.txt  CMakePresets.json
demos/projects/ST/b-l475e-iot01a/: main.c  main.h  system_data.c  system_data.h
demos/projects/ST/b-l475e-iot01a/config/: demo_config.h
demos/projects/ST/b-l475e-iot01a/st_code/: es_wifi.c  stm32l4xx_it.c
demos/projects/ST/b-l475e-iot01a/temp/: stm32l4xx_hal_uart.c
demos/sample_azure_iot/: sample_azure_iot.c
src/: CMakeLists.txt
src/common/connection/: connection.h
src/common/controller_communication/: controller_data.c  gui_comm_api.c  uart_data_struct.h
src/common/transport/: transport_socket.c  transport_tls_socket_using_mbedtls.c
src/driver_override/: stm32_drivers_overwrite.bat  stm32l475e_iot01.c  stm32l475e_iot01.h
src/process/: assert_override.h  common_definition.h  connection.h  iot_tasks.c  process_backend.c  process_cloud_msg.c  process_cloud_msg.h  process_telemetry.c  process_telemetry.h  properties.c  properties.h  telemetry.c  telemetry.h
src/projects/ST/b-l475e-iot01a/: CMakeLists.txt  connection.h  errors.h  log_utility.h  main.c  main.h
src/projects/ST/b-l475e-iot01a/config/: FreeRTOSConfig.h  azure_iot_config.h  config.h  core_http_config.h  core_mqtt_config.h
src/projects/ST/b-l475e-iot01a/controller_communication/: controller_data.c  controller_data.h  gui_comm_api.h  uart_api.c
src/projects/ST/b-l475e-iot01a/driver_wrappers/: freertos_wrapper.c  freertos_wrapper.h  security_wrapper.c  security_wrapper.h  time_wrapper.c  time_wrapper.h  uart_wrapper.c  uart_wrapper.h  watchdog_wrapper.c  watchdog_wrapper.h  wifi_wrapper.c  wifi_wrapper.h
src/projects/ST/b-l475e-iot01a/st_code/: stm32l4xx_hal_conf.h  stm32l4xx_it.c
src/projects/ST/stm32h745i-disco/cm7/: CMakeLists.txt  errors.h  log_utility.h  main.c  main.h
src/projects/ST/stm32h745i-disco/cm7/config/: FreeRTOSConfig.h  config.h  demo_config.h
src/projects/ST/stm32h745i-disco/cm7/controller_communication/: controller_data.c  controller_data.h  gui_comm_api.c  uart_api.c  uart_api.h  uart_data_struct.h
src/projects/ST/stm32h745i-disco/cm7/driver_wrappers/: connection.c  freertos_wrapper.c  freertos_wrapper.h  memory_wrapper.c  memory_wrapper.h  security_wrapper.c  security_wrapper.h  time_wrapper.c  time_wrapper.h  uart_gpio_wrapper.c  uart_gpio_wrapper.h  uart_wrapper.c  uart_wrapper.h
